--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,23 +2,19 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   pull_request:
-    branches: ["main"]
-
-permissions:
-  contents: read
+    branches: [main]
 
 jobs:
+
   python_lint:
     name: python_lint (ruff)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
@@ -28,20 +24,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff
 
-      - name: Ruff lint (ingest + orchestration)
-        run: |
-          ruff check ingest orchestration
+      - name: Ruff lint
+        run: ruff check .
 
   python_format_check:
     name: python_format_check (ruff format --check)
     runs-on: ubuntu-latest
-    needs: [python_lint]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
@@ -52,89 +44,63 @@ jobs:
           pip install ruff
 
       - name: Ruff format check
-        run: |
-          ruff format --check ingest orchestration
+        run: ruff format --check .
 
   terraform_validate:
     name: terraform_validate
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.7.5"
+      - uses: hashicorp/setup-terraform@v3
 
-      - name: terraform fmt -check
-        working-directory: infra/terraform
-        run: terraform fmt -check -recursive
+      - name: Terraform fmt
+        run: terraform -chdir=infra/terraform fmt -check -recursive
 
-      - name: terraform init (no backend)
-        working-directory: infra/terraform
-        run: terraform init -backend=false
+      - name: Terraform init (no backend)
+        run: terraform -chdir=infra/terraform init -backend=false
 
-      - name: terraform validate
-        working-directory: infra/terraform
-        run: terraform validate
+      - name: Terraform validate
+        run: terraform -chdir=infra/terraform validate
 
   dbt_compile:
-    name: dbt_compile (deps + parse, no Snowflake required)
+    name: dbt_compile (offline)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
-      - name: Install dbt (snowflake adapter)
+      - name: Install dbt
         run: |
           python -m pip install --upgrade pip
-          pip install "dbt-snowflake==1.8.4"
-
-      - name: Cache dbt packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            dbt/dbt_packages
-            dbt/logs
-            dbt/target
-          key: ${{ runner.os }}-dbt-${{ hashFiles('dbt/packages.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-dbt-
+          pip install dbt-core dbt-snowflake
 
       - name: dbt deps
-        working-directory: dbt
-        run: dbt deps
+        run: dbt deps --project-dir dbt --profiles-dir .github/ci_profiles
 
-      - name: dbt parse (CI dummy profile)
-        working-directory: dbt
-        run: |
-          dbt parse \
-            --profiles-dir ../.github/dbt_profiles \
-            --target ci
+      - name: dbt parse
+        run: dbt parse --project-dir dbt --profiles-dir .github/ci_profiles
 
   docker_build:
-    name: docker_build (ingest + prefect)
+    name: docker_build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dockerfile:
+          - ingest/Dockerfile
+          - orchestration/prefect/Dockerfile
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Build ingest image
-        run: |
-          test -f ingest/Dockerfile
-          docker build -t dp-mailblaze-demo-ingest:ci ./ingest
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Build prefect/orchestration image (if Dockerfile exists)
-        run: |
-          if test -f orchestration/prefect/Dockerfile; then
-            docker build -t dp-mailblaze-demo-prefect:ci ./orchestration/prefect
-          else
-            echo "No orchestration/prefect/Dockerfile found; skipping prefect image build."
-          fi
+      - name: Build image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ${{ matrix.dockerfile }}
+          push: false
