--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,11 +89,18 @@ jobs:
       - name: dbt deps
         run: |
           dbt deps --project-dir dbt --profiles-dir "${{ github.workspace }}/.github/ci_profiles"
-
-      - name: dbt parse
+      
+      - name: Debug profiles.yml content
         run: |
-          dbt parse --project-dir dbt --profiles-dir "${{ github.workspace }}/.github/ci_profiles"
-    
+          echo "Workspace: $GITHUB_WORKSPACE"
+          ls -la "${{ github.workspace }}/.github/ci_profiles"
+          echo "---- profiles.yml ----"
+          cat "${{ github.workspace }}/.github/ci_profiles/profiles.yml"
+
+            - name: dbt parse
+              run: |
+                dbt parse --project-dir dbt --profiles-dir "${{ github.workspace }}/.github/ci_profiles"
+          
 
   docker_build:
     name: docker_build
