--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 .env.*
 *.pem
 *.key
-dbt/profiles.yml
 
 # ===============================
 # Python
@@ -29,7 +28,7 @@ infra/terraform/env/*.tfvars
 
 # ===============================
 # Local env
-# ===============================s
+# ===============================
 .env
 infra/terraform/env/*.tfvars
 orchestration/prefect/.env
@@ -53,11 +52,18 @@ data/inventory/
 data/events/
 
 # ===============================
-# dbt local profile
+# dbt local profile (ignore local only)
 # ===============================
-dbt/profiles.yml
 .dbt/
+dbt/profiles.yml
 **/profiles.yml
+
+# Allow CI dbt profile (tracked in git)
+!.github/ci_profiles/profiles.yml
+
+# Allow GitHub workflow files (tracked in git)
+!.github/workflows/*.yml
+!.github/workflows/*.yaml
 
 # ===============================
 # dbt artifacts
@@ -66,15 +72,15 @@ dbt/target/
 dbt/dbt_packages/
 dbt/logs/
 
-#==============================
-# Local runtime data 
-#==============================
+# ===============================
+# Local runtime data
+# ===============================
 postgres/
 **/postgres/
 
-#==============================
+# ===============================
 # Terraform local state
-#==============================
+# ===============================
 **/.terraform/
 **/*.tfstate
 **/*.tfstate.*
